# nightbot

./: .env  .gitignore  Dockerfile.sandbox  LICENSE  README.md  ROADMAP.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  probeai.yml
config/: nightbot.example.yaml
config/agents/: alex.yaml  implementer.yaml  scout.yaml  secretary.yaml
docs/: ARCHITECTURE.md
queue/escalated/: task-1a82e230.yaml
queue/pending/: task-208e8caa.yaml
src/: cli.ts  config.ts  context.test.ts  context.ts  dashboard.ts  escalation.ts  feedback.test.ts  feedback.ts  gate.test.ts  gate.ts  llm.ts  orchestrator.ts  planner.test.ts  planner.ts  probeai.ts  sandbox.ts  scout.ts  task.test.ts  task.ts  utils.test.ts  utils.ts
src/nightbot/: __init__.py  cli.py  config.py  escalation.py  llm.py  orchestrator.py  planner.py  sandbox.py  scout.py  task.py
templates/: task.yaml.tmpl
tests/probeai/: build-check.yaml  lint-check.yaml  typecheck.yaml
